--- a/wmplus-kwin/README
+++ b/wmplus-kwin/README
@@ -1,7 +1,16 @@
 wmplus-kwin
 	wmplus for kwin (linux only)
-	feature like wmplus for windows , but only feature 2 & 3 .
-	and default hotkey change to win + f3 & win + f4 .
+	feature like wmplus for windows ,
+	but only feature 2 & 3 .
+	feature 1 use win + 1~9 to setting foreground window position ,
+	not detect cursor position .
+	7 | 8 | 9
+	4 | 5 | 6
+	1 | 2 | 3
+	press 7 will move the foreground window to left-top .
+	press 3 will move the foreground window to right-bottom .
+	press 5 will move the foreground window to center .
+	other analogy .
 	use make to install . (plasma 5 only)
 	use make kde4 to install . (plasma 4 only)
 	install(path).txt for uninstall & remove setting .
