mod javascript/wmplus-kwin/* & mod python/wmplus/README

--- a/python/wmplus/README
+++ b/python/wmplus/README
@@ -11,7 +11,7 @@ system requirements :
 		http://sourceforge.net/projects/pywin32/
 	work fine version :
 	正常工作版本：
-		python 2.7.10 , pywin32 build 219
+		python 2.7.13 , pywin32 build 220
 feature 1 :
 功能 1：
 	when you press win + ` , it will detect cursor position .
@@ -43,7 +43,7 @@ feature 2 :
 功能 2：
 	when you press win + f3 ,
 	it will change the foreground window to toggle three size .
-	當你按下 win + ` f3 ，
+	當你按下 win + f3 ，
 	它將會從三種大小切換來改變目前視窗大小。
 	the three size can manual setting ,
 	default : 800x600 , 1024x768 , 1280x960 .
