--- a/javascript/wmplus-kwin/README
+++ b/javascript/wmplus-kwin/README
@@ -1,30 +1,71 @@
 [wmplus-kwin]
 wmplus for kwin . (linux only)
 wmplus kwin 版本。 (只適用 linux)
-feature like wmplus for windows ,
-but only feature 2 & 3 .
-功能上類似 wmplus windows 版，
-但只有功能 2 和 3 類似。
-feature 1 use win + 1~9 to setting foreground window position ,
-not detect cursor position .
-功能 1 使用 win + 1~9 來設定目前視窗位置，
-而不是偵測滑鼠遊標位置。
-7 | 8 | 9
-4 | 5 | 6
-1 | 2 | 3
-press win + 5 will move the foreground window to center .
-按下 win + 5 它將會把目前視窗移動到中央。
-press win + 7 will move the foreground window to left-top .
-按下 win + 7 它將會把目前視窗移動到左上角。
-press win + 3 will move the foreground window to right-bottom .
-按下 win + 3 它將會把目前視窗移動到右下角。
-other analogy .
-其它類推。
-use "make" to install . (plasma 5 only)
-使用 "make" 安裝。 (只適用 plasma 5)
-use "make kde4" to install . (plasma 4 only)
-使用 "make kde4" 安裝。 (只適用 plasma 4)
+feature like wmplus for windows , but only feature 2 & 3 .
+功能上類似 wmplus windows 版，但只有功能 2 和 3 類似。
+https://github.com/belldandy-syaorin/script/tree/master/python/wmplus
+feature 1 :
+功能 1：
+	feature 1 use win + 1~9 to setting foreground window position ,
+	not detect cursor position .
+	功能 1 使用 win + 1~9 來設定目前視窗位置，
+	而不是偵測滑鼠遊標位置。
+	7 | 8 | 9
+	4 | 5 | 6
+	1 | 2 | 3
+	press win + 5 will move the foreground window to center .
+	按下 win + 5 它將會把目前視窗移動到中央。
+	press win + 7 will move the foreground window to left-top .
+	按下 win + 7 它將會把目前視窗移動到左上角。
+	press win + 3 will move the foreground window to right-bottom .
+	按下 win + 3 它將會把目前視窗移動到右下角。
+	other analogy .
+	其它類推。
+feature 2 :
+功能 2：
+	when you press win + f3 ,
+	it will change the foreground window to toggle three size .
+	當你按下 win + ` f3 ，
+	它將會從三種大小切換來改變目前視窗大小。
+	the three size can manual setting ,
+	default : 800x600 , 1024x768 , 1280x960 .
+	這三種大小可以自行設定，
+	預設值為： 800x600 , 1024x768 , 1280x960 。
+feature 3 :
+功能 3：
+	when you press win + f4 ,
+	當你按下 win + f4 ，
+	it will detect desktop resolution .
+	它將會偵測桌面的解析度。
+	and it will change the foreground window to toggle three size .
+	然後它將會從三種大小切換來改變目前視窗大小。
+	the three size can manual setting ,
+	這三種大小可以自行設定，
+	default is desktop resolution's 1/2 , 2/3 , 4/5 .
+	預設值為桌面解析度的： 1/2 , 2/3 , 4/5 。
+feature 4 & 5 :
+功能 4 和 5：
+	feature like feature 3 ,
+	but will use the maximum horizon (feature 4) and vertical resolution (feature 5).
+	功能上類似功能 3，
+	但會使用最大水平(feature 4)和垂直解析度(feature 5)。
+	default is desktop resolution's 1/3 , 1/2 , 2/3 .
+	預設值為桌面解析度的： 1/3 , 1/2 , 2/3 。
+	default hotkey :
+	預設熱鍵：
+	feature 4 : use win + f7
+	功能 4 ： 使用 win + f7
+	feature 5 : use win + f8
+	功能 5 ： 使用 win + f8
+install :
+安裝 :
+	use "make install" to install . (plasma 5 only)
+	使用 "make install" 安裝。 (只適用 plasma 5)
+	use "make kde4install" to install . (plasma 4 only)
+	使用 "make kde4install" 安裝。 (只適用 plasma 4)
 
 [install(path).txt]
 uninstall information , just remove directory & file .
 反安裝的相關訊息，只需要移除目錄和檔案。
+don't forget edit kglobalshortcutsrc to remove hotkey .
+別忘記編輯 kglobalshortcutsrc 移除熱鍵。
