mod aria2/README & mpv/mpv.sh add rhash/README rename wmplus-kwin

--- a/aria2/README
+++ b/aria2/README
@@ -8,3 +8,5 @@ Preferences -> General
 	Download Manager -> Add -> aria2.vbs
 	Executable path: -> Browse... -> C:\Windows\System32\wscript.exe
 	Command line arguments template: -> C:\repository\git\script\aria2\aria2.vbs [URL] [REFERER]
+	//bin
+		mklink aria2c.exe <Link Target>
