--- a/linux/wmplus-kwin/README
+++ b/linux/wmplus-kwin/README
@@ -48,7 +48,7 @@ feature 4 & 5 :
 	feature like feature 3 ,
 	but will use the maximum horizon (feature 4) and vertical resolution (feature 5).
 	功能上類似功能 3，
-	但會使用最大水平(feature 4)和垂直解析度(feature 5)。
+	但會使用最大水平(功能 4)和垂直解析度(功能 5)。
 	default is desktop resolution's 1/3 , 1/2 , 2/3 , 4/5 .
 	預設值為桌面解析度的： 1/3 , 1/2 , 2/3 , 4/5 。
 	default hotkey :
