--- a/python/wmplus/README
+++ b/python/wmplus/README
@@ -11,7 +11,7 @@ system requirements :
 		http://sourceforge.net/projects/pywin32/
 	work fine version :
 	正常工作版本：
-		python 2.7.13 , pywin32 build 220
+		python 2.7.15 , pywin32 build 223
 feature 1 :
 功能 1：
 	when you press win + ` , it will detect cursor position .
@@ -44,11 +44,11 @@ feature 2 :
 	when you press win + f3 ,
 	it will change the foreground window to toggle three size .
 	當你按下 win + f3 ，
-	它將會從三種大小切換來改變目前視窗大小。
-	the three size can manual setting ,
-	default : 800x600 , 1024x768 , 1280x960 .
-	這三種大小可以自行設定，
-	預設值為： 800x600 , 1024x768 , 1280x960 。
+	它將會從六種大小切換來改變目前視窗大小。
+	the six size can manual setting ,
+	default : 800x600 , 1024x768 , 1280x960 , 800x450 , 1024x576 , 1280x720 .
+	這六種大小可以自行設定，
+	預設值為： 800x600 , 1024x768 , 1280x960 , 800x450 , 1024x576 , 1280x720 。
 feature 3 :
 功能 3：
 	when you press win + f4 ,
@@ -67,8 +67,8 @@ feature 4 & 5 :
 	but will use the maximum horizon (feature 4) and vertical resolution (feature 5).
 	功能上類似功能 3，
 	但會使用最大水平(功能 4)和垂直解析度(功能 5)。
-	default is desktop resolution's 1/3 , 1/2 , 2/3 , 4/5 .
-	預設值為桌面解析度的： 1/3 , 1/2 , 2/3 , 4/5 。
+	default is desktop resolution's 1/2 , 2/3 , 4/5 .
+	預設值為桌面解析度的： 1/2 , 2/3 , 4/5 。
 	default hotkey :
 	預設熱鍵：
 	feature 4 : use win + f7
